--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
           <a
             target="_blank"
             href="https://www.google.com/maps/place/Betty+Ice/@44.4713277,26.0856632,17z/data=!3m1!4b1!4m6!3m5!1s0x40b2021313897175:0x4bc1aad4cfb7d402!8m2!3d44.4713277!4d26.0856632!16s%2Fg%2F11cs18jx41"
-            class="modal_btn-text"
+            class="modal-2__btn-text"
             >Open in Google Maps</a
           >
         </button>
