--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="./sass/index.scss">
 </head>
 <body>
@@ -136,12 +138,16 @@
     <include src="./partials/products.html"></include>
     <include src="./partials/about-advantages.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/swiper.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
+
   </main>
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
-  <script src="./js/buy-modal.js"></script>
-  <script src="./js/locationsModals.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="./js/swipe.js"></script>
+
 </body>
 </html>
