--- a/src/index.html
+++ b/src/index.html
@@ -14,28 +14,13 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-  <link rel="stylesheet" href="./sass/index.scss">
+  <link rel="stylesheet" href="./sass/index.scss"/>
 </head>
 <body>
   <!--ModalSection-->
-  <div class="about-modal about-modal-is-hidden" data-modal>
-    <div class="about-modal-inner-div">
-      <button data-modal-close class="about-modal-button close-button">
-        <svg width="15" height="15">
-          <use href="images/icons-svg.svg#icon-close"></use>
-        </svg>
-      </button>
-      <p class="description">Ice cream is a frozen dessert, typically made from milk or cream and flavoured with a
-        sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit such as
-        strawberries or peaches. It can also be made by whisking a flavored cream base and liquid nitrogen together.
-        Food coloring is sometimes added, in addition to stabilizers. The mixture is cooled below the freezing point of
-        water and stirred to incorporate air spaces and to prevent detectable ice crystals from forming. The result is a
-        smooth, semi-solid foam that is solid at very low temperatures (below 2 °C or 35 °F). It becomes more malleable
-        as its temperature increases.</p>
-    </div>
-  </div>
+ 
 
-  <!--Buy-now-modal-->
+  <!-- Buy-now-modal-->
   <div class="buy-modal buy-modal-is-hidden" data-modal >
   <div class="buy-modal-inner-div">
     <button data-modal-close class="buy-modal-button buy-modal__btn" type="button">
@@ -109,9 +94,26 @@
     <button class="buy-modal__submit-btn" type="submit">Send</button>
   </div>
   </div>
-</div>
 
-  <!--Locations Modal-->
+  <div class="about-modal about-modal-is-hidden" data-modal>
+    <div class="about-modal-inner-div">
+      <button data-modal-close class="about-modal-button close-button">
+        <svg width="15" height="15">
+          <use href="images/icons-svg.svg#icon-close"></use>
+        </svg>
+      </button>
+      <p class="description">Ice cream is a frozen dessert, typically made from milk or cream and flavoured with a
+        sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit such as
+        strawberries or peaches. It can also be made by whisking a flavored cream base and liquid nitrogen together.
+        Food coloring is sometimes added, in addition to stabilizers. The mixture is cooled below the freezing point of
+        water and stirred to incorporate air spaces and to prevent detectable ice crystals from forming. The result is a
+        smooth, semi-solid foam that is solid at very low temperatures (below 2 °C or 35 °F). It becomes more malleable
+        as its temperature increases.</p>
+    </div>
+  </div>
+
+
+  <!-- Locations Modal -->
   <div class="modal-locations location-is-hidden" data-modal>
     <div class="modal-locations__inside">
       <button class="modal-locations__button location-button" data-modal-close>
@@ -133,6 +135,7 @@
         <button class="frame-locations__button" type="submit">Open map</button>
     </div>
   </div>
+
   <main>
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
@@ -146,6 +149,8 @@
 
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
+  <script src="./js/buy-modal.js"></script>
+  <script src="./js/locationsModals.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/swipe.js"></script>
 
