--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,34 @@
         as its temperature increases.</p>
     </div>
   </div>
-
+  <!--mobile-menu-->
+  <div class=" menu-container" js-menu-container is-open">
+  <div class="mobile-menu">
+    <button class="mobile-menu__btn js-close-menu" 
+            type="button">
+      <svg class="mobile-menu__close-icon" width="20" height="32">
+          <use href="./images/icons-svg.svg#icon-close"></use> 
+      </svg>
+    </button>
+    <button class="menu-toggle js-open-menu mobile-menu__buy-btn"
+            aria-expanded="false"
+            aria-controls="mobile-menu" type="button">
+      Buy now
+      <svg class="mobile-menu__btn-icon" width="8" height="8">
+        <use href="./images/header/icons.svg#icon-btn-arrow"></use>
+      </svg>
+    </button>
+    <nav>
+      <ul class="mobile-menu__list">
+        <li><a class="mobile-menu__item" href="#home">Home</a></li>
+        <li><a class="mobile-menu__item" href="#about">About us</a></li>
+        <li><a class="mobile-menu__item" href="#advantages">How it’s made?</a></li>
+        <li><a class="mobile-menu__item" href="#products">Our products</a></li>
+        <li><a class="mobile-menu__item" href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
   <!--Buy-now-modal-->
   <div class="buy-modal buy-modal-is-hidden" data-modal >
   <div class="buy-modal-inner-div">
@@ -110,7 +137,6 @@
   </div>
   </div>
 </div>
-
   <!--Locations Modal-->
   <div class="modal-locations location-is-hidden" data-modal>
     <div class="modal-locations__inside">
@@ -141,14 +167,11 @@
     <include src="./partials/swiper.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
-
   </main>
-
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/swipe.js"></script>
-
-
+  <script src="./js/buy-modal.js"></script>
 </body>
 </html>
