--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <include src="./partials/howitsmade.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
-    <script src="/src/index.js"></script>
+    <script src="/src/modal-2.js"></script>
     <script src="/src/index-2.js"></script>
   </body>
 </html>
