--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,6 @@
   <script src="./js/locationsModals.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/swipe.js"></script>
-  <script src="./js/buy-modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
