--- a/src/index.html
+++ b/src/index.html
@@ -35,29 +35,25 @@
     </div>
   </div>
   <!--mobile-menu-->
-  <div class=" menu-container" js-menu-container is-open">
-  <div class="mobile-menu">
-    <button class="mobile-menu__btn js-close-menu" 
-            type="button">
-      <svg class="mobile-menu__close-icon" width="20" height="32">
+  <div class="menu-container js-menu-container nav-menu" id="mobile-menu">
+    <button class="menu-toggle js-close-menu nav-menu__btn">
+      <svg class="nav-menu__close-icon" width="20" height="32">
           <use href="./images/icons-svg.svg#icon-close"></use> 
       </svg>
     </button>
-    <button class="menu-toggle js-open-menu mobile-menu__buy-btn"
-            aria-expanded="false"
-            aria-controls="mobile-menu" type="button">
+    <button data-modal-open class="buy-modal-button button nav-menu__buy-btn" type="button">
       Buy now
-      <svg class="mobile-menu__btn-icon" width="8" height="8">
+      <svg class="nav-menu__btn-icon" width="8" height="8">
         <use href="./images/header/icons.svg#icon-btn-arrow"></use>
       </svg>
     </button>
     <nav>
-      <ul class="mobile-menu__list">
-        <li><a class="mobile-menu__item" href="#home">Home</a></li>
-        <li><a class="mobile-menu__item" href="#about">About us</a></li>
-        <li><a class="mobile-menu__item" href="#advantages">How it’s made?</a></li>
-        <li><a class="mobile-menu__item" href="#products">Our products</a></li>
-        <li><a class="mobile-menu__item" href="#contact">Contact</a></li>
+      <ul class="nav-menu__list mobile-menu">
+        <li><a class="nav-menu__item" href="#home">Home</a></li>
+        <li><a class="nav-menu__item" href="#about">About us</a></li>
+        <li><a class="nav-menu__item" href="#advantages">How it’s made?</a></li>
+        <li><a class="nav-menu__item" href="#products">Our products</a></li>
+        <li><a class="nav-menu__item" href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -106,33 +102,33 @@
           </label>
         </li>
       </ul>
-    <form class="buy-modal__form">
-      <label class="buy-modal__label">
-        Name
-        <svg  class="buy-modal__icon" width="20" height="14">
-          <use href="./images/header/icons.svg#icon-name"></use>
-        </svg>
-        <input class="buy-modal__input" type="text" name="name" pattern="[a-zA-Zа-яА-Я]+" minlength="2" required>
-      </label>
-      <label class="buy-modal__label">
-        E-mail
-        <svg class="buy-modal__icon" width="18" height="16">
-          <use href="./images/header/icons.svg#icon-envelope"></use>
-        </svg>
-        <input class="buy-modal__input"  type="email" name="email" required>
-      </label>
-      <label class="buy-modal__label">
-        Phone number
-        <svg class="buy-modal__icon" width="22" height="16">
-          <use href="./images/header/icons.svg#icon-telephone"></use>
-        </svg>
-        <input class="buy-modal__input"  type="number" name="phone" autocomplete="off">
-      </label>
-      <label class="buy-modal__label">
-        Leave a comment
-        <textarea class="buy-modal__textarea" name="comment" placeholder="text"></textarea>
-      </label>
-    </form>
+        <form class="buy-modal__form">
+          <label class="buy-modal__label">
+            Name
+            <svg  class="buy-modal__icon" width="20" height="14">
+              <use href="./images/header/icons.svg#icon-name"></use>
+            </svg>
+            <input class="buy-modal__input" type="text" name="name" pattern="[a-zA-Zа-яА-Я]+" minlength="2" required>
+          </label>
+          <label class="buy-modal__label">
+            E-mail
+            <svg class="buy-modal__icon" width="18" height="16">
+              <use href="./images/header/icons.svg#icon-envelope"></use>
+            </svg>
+            <input class="buy-modal__input"  type="email" name="email" required>
+          </label>
+          <label class="buy-modal__label">
+            Phone number
+            <svg class="buy-modal__icon" width="22" height="16">
+              <use href="./images/header/icons.svg#icon-telephone"></use>
+            </svg>
+            <input class="buy-modal__input"  type="number" name="phone" autocomplete="off">
+          </label>
+          <label class="buy-modal__label">
+            Leave a comment
+            <textarea class="buy-modal__textarea" name="comment" placeholder="text"></textarea>
+          </label>
+        </form>
     <button class="buy-modal__submit-btn" type="submit">Send</button>
   </div>
   </div>
@@ -192,6 +188,6 @@
   <script src="./js/locationsModals.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/swipe.js"></script>
-  <script src="./js/buy-modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
