--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,6 @@
     <include src="./partials/howitsmade.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="./how-button.js"></script>
   </body>
 </html>
