--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,11 @@
   <include src="./partials/customer-rev-section.html"></include>
   <include src="./partials/contacts-section.html"></include>
   <include src="./partials/footer-section.html"></include>
-  <include src="./partials/modal-meniu.html"></include>
+  <include src="./partials/mobile-menu.html"></include>
 
 <script src="./js/mobile-menu.js"></script>
 <script src="./js/carousel.js"></script>
+<script src="./js/scroll.js"></script>
 </body>
 
 </html>
