--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
           <use href="./images/icons-svg.svg#icon-close"></use> 
       </svg>
     </button>
-    <button data-modal-open class="buy-modal-button button nav-menu__buy-btn" type="button">
+    <button data-modal-open class="buy-modal-button-menu button nav-menu__buy-btn" type="button">
       Buy now
       <svg class="nav-menu__btn-icon" width="8" height="8">
         <use href="./images/header/icons.svg#icon-btn-arrow"></use>
@@ -58,7 +58,7 @@
       </ul>
     </nav>
   </div>
-</div>
+
   <!--Buy-now-modal-->
   <div class="buy-modal buy-modal-is-hidden" data-modal >
   <div class="buy-modal-inner-div">
@@ -193,6 +193,9 @@
   <script src="./js/locationsModals.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/swipe.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"></script>
   <script src="./js/mobile-menu.js"></script>
 
 </body>
