--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
 <script src="./js/mobile-menu.js"></script>
 <script src="./js/carousel.js"></script>
 <script src="./js/scroll.js"></script>
+<script src="./js/close.js"></script>
 </body>
 
 </html>
