--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,8 @@
       </ul>
     </nav>
   </div>
-
   <!--Buy-now-modal-->
-  <div class="buy-modal buy-modal-is-hidden" data-modal >
+  <div class="buy-modal buy-modal-is-hidden" data-modal>
   <div class="buy-modal-inner-div">
     <button data-modal-close class="buy-modal-button buy-modal__btn" type="button">
         <svg class="buy-modal__close-icon" width="12" height="12">
@@ -74,7 +73,7 @@
               srcset="./images/header/buy-icecream.png 1x, ./images/header/buy-icecream@2x.png"
               src="./images/header/buy-icecream.png" 
               alt="icecrem-balls" 
-              width="107">
+              >
           <p class="buy-modal__text">250 g</p>
           <label  class="buy-modal__order-label">
             <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
@@ -84,8 +83,8 @@
             <img class="buy-modal__img buy-modal__img--coffe-color" 
                 srcset="./images/header/buy-icecoffe.png 1x, ./images/header/buy-icecoffe@2x.png"
                 src="./images/header/buy-icecoffe.png" 
-                alt="icecrem-balls" 
-                width="107">
+                alt="icecoffe" 
+                >
             <p class="buy-modal__text">200 ml</p>
             <label  class="buy-modal__order-label">
               <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
@@ -95,8 +94,8 @@
           <img class="buy-modal__img buy-modal__img--green-color" 
               srcset="./images/header/buy-milkshake.png 1x, ./images/header/buy-milkshake@2x.png"
               src="./images/header/buy-milkshake.png" 
-              alt="icecrem-balls" 
-              width="107">
+              alt="milkshake" 
+             >
           <p class="buy-modal__text">200 ml</p>
           <label  class="buy-modal__order-label">
             <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
@@ -133,10 +132,8 @@
     <button class="buy-modal__submit-btn" type="submit">Send</button>
   </div>
   </div>
-
-</div>
   <!--Locations Modal-->
-<div class="about-modal about-modal-is-hidden" data-modal>
+  <div class="about-modal about-modal-is-hidden" data-modal>
     <div class="about-modal-inner-div">
       <button data-modal-close class="about-modal-button close-button">
         <svg width="15" height="15">
@@ -169,24 +166,20 @@
       <iframe class="frame-locations"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.6851669235175!2d1.4026918508752027!3d38.88544437947223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129945cd5c67f891%3A0xbf31e71e9658c299!2sUshua%C3%AFa%20Ibiza!5e0!3m2!1sen!2sus!4v1680960232562!5m2!1sen!2sus"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <form class="frame-locations__form" target="_blank"
-        action="https://www.google.com/maps/place/Ushua%C3%AFa+Ibiza/@38.8854444,1.4026919,17z/data=!3m1!4b1!4m6!3m5!1s0x129945cd5c67f891:0xbf31e71e9658c299!8m2!3d38.8854444!4d1.4048859!16s%2Fm%2F0lkntjz?">
+      <form class="frame-locations__form" target="_blank">
+        action="https://www.google.com/maps/place/Ushua%C3%AFa+Ibiza/@38.8854444,1.4026919,17z/data=!3m1!4b1!4m6!3m5!1s0x129945cd5c67f891:0xbf31e71e9658c299!8m2!3d38.8854444!4d1.4048859!16s%2Fm%2F0lkntjz?"></form>
         <button class="frame-locations__button" type="submit">Open map</button>
     </div>
   </div>
-
   <main>
-    
-    <include src="./partials/header-hero.html"></include>
+     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about-advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/swiper.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
-
   </main>
-
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
   <script src="./js/buy-modal.js"></script>
@@ -197,6 +190,5 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"></script>
   <script src="./js/mobile-menu.js"></script>
-
 </body>
 </html>
