--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="./sass/index.scss" />
+    <script type="module" src="./index.js"></script>
+    <title>Ice Cream</title>
+  </head>
+  <body>
+    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/hero-header-section.html"></include>
+    <include src="./partials/products-section.html"></include>
+    <include src="./partials/about-section.html"></include>
+    <include src="./partials/advantages-section.html"></include>
+    <include src="./partials/gallery-section.html"></include>
+    <include src="./partials/customer-rev-section.html"></include>
+    <include src="./partials/contacts-section.html"></include>
+    <include src="./partials/footer-section.html"></include>
+    <include src="./partials/modal-meniu.html"></include>
+    <include src="./partials/modal.html"></include>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-   <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="./sass/index.scss" />
-  <script type="module" src="./index.js"></script>
-  <title>Ice Cream</title>
-</head>
-<body>
-  <!-- ❗️❗️❗️ Add partials like so for every page -->
-  <include src="./partials/hero-header-section.html"></include>
-  <include src="./partials/products-section.html"></include>
-  <include src="./partials/about-section.html"></include>
-  <include src="./partials/advantages-section.html"></include>
-  <include src="./partials/gallery-section.html"></include>
-  <include src="./partials/customer-rev-section.html"></include>
-  <include src="./partials/contacts-section.html"></include>
-  <include src="./partials/footer-section.html"></include>
-  <include src="./partials/modal-meniu.html"></include>
-
-<script src="./js/mobile-menu.js"></script>
-<script src="./js/carousel.js"></script>
-</body>
-
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/carousel.js"></script>
+    <script src="js/modal.js"></script>
+  </body>
 </html>
