--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" type="image/ico" href="/src/images/icecream.ico"> 
+  <link rel="shortcut icon" type="image/ico" href="/src/images/icecream.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-   <link rel="stylesheet"
+  <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
@@ -16,9 +16,12 @@
   <script type="module" src="./index.js"></script>
   <title>Ice Cream</title>
 </head>
+
 <body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
+  <include src="./partials/modal.html"></include>
   <include src="./partials/hero-header-section.html"></include>
+ 
   <include src="./partials/products-section.html"></include>
   <include src="./partials/about-section.html"></include>
   <include src="./partials/advantages-section.html"></include>
@@ -28,10 +31,12 @@
   <include src="./partials/footer-section.html"></include>
   <include src="./partials/mobile-menu.html"></include>
 
-<script src="./js/mobile-menu.js"></script>
-<script src="./js/carousel.js"></script>
-<script src="./js/scroll.js"></script>
-<script src="./js/close.js"></script>
+
+  <script src="./js/mobile-menu.js"></script>
+  <script src="./js/carousel.js"></script>
+  <script src="./js/scroll.js"></script>
+  <script src="./js/close.js"></script>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
