--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
     <button class="buy-modal__submit-btn" type="submit">Send</button>
   </div>
   </div>
-  <!--Locations Modal-->
+  <!--About Modal-->
   <div class="about-modal about-modal-is-hidden" data-modal>
     <div class="about-modal-inner-div">
       <button data-modal-close class="about-modal-button close-button">
