Revert "Header hero5"

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         <li><a class="nav-menu__item" href="#about">About us</a></li>
         <li><a class="nav-menu__item" href="#advantages">How it’s made?</a></li>
         <li><a class="nav-menu__item" href="#products">Our products</a></li>
-        <li><a class="nav-menu__item" href="#footer">Contact</a></li>
+        <li><a class="nav-menu__item" href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
