--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </button>
       </div>
       <div class="hero-header-nav">
-        <h3>ice cream made with</h3>
-        <h2>passion</h2>
+        <h3 style="text-transform: uppercase">ice cream made with</h3>
+        <h2 style="text-transform: uppercase">passion</h2>
         <button>Products</button>
-        <button>How it’s made?</button>
+        <button>How it’s made?</button> <br />
         <img src="./images/slider-pic5-1.jpg" alt="a can of milk" />
         <img src="./images/arrow-right-3.png" alt="arrow right ->" />
         <h4>
@@ -33,9 +33,11 @@
           buds to an unforgettable experience!
         </h4>
         <img src="./images/Ellipse-3.png" alt="circle" />
-        <img src="./images/slider-pic7-1.png" alt="IceCream" />
+        <img src="./images/slider-pic7-1.png" alt="IceCream" /> <br />
+        <img src="./images/Ellipse-1.png" alt="circle" />
         <h2>16</h2>
         <h4>cafes</h4>
+        <img src="./images/Ellipse-2.png" alt="circle" />
         <h2>23</h2>
         <h4>food trucks</h4>
         <img src="./images/slider-pic4-1.png" alt="girl taste IceCream" />
