--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>IceCream</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <!-- Hero header -->
+    <section>
+      <div class="hero-header-container">
+        <img src="./images/Group.svg" alt="Logo" />
+        <div><a>Home</a></div>
+        <div><a>About us</a></div>
+        <div><a>How it’s made?</a></div>
+        <div><a>Our products</a></div>
+        <div><a>Contact</a></div>
+        <button>
+          Buy now <img src="./images/Vector-1.png" alt="button arrow ->" />
+        </button>
+      </div>
+      <div class="hero-header-nav">
+        <h3 style="text-transform: uppercase">ice cream made with</h3>
+        <h2 style="text-transform: uppercase">passion</h2>
+        <button>Products</button>
+        <button>How it’s made?</button> <br />
+        <img src="./images/slider-pic5-1.jpg" alt="a can of milk" />
+        <img src="./images/arrow-right-3.png" alt="arrow right ->" />
+        <h4>
+          Indulge in a scoop of ice cream made with passion and treat your taste
+          buds to an unforgettable experience!
+        </h4>
+        <img src="./images/Ellipse-3.png" alt="circle" />
+        <img src="./images/slider-pic7-1.png" alt="IceCream" /> <br />
+        <img src="./images/Ellipse-1.png" alt="circle" />
+        <h2>16</h2>
+        <h4>cafes</h4>
+        <img src="./images/Ellipse-2.png" alt="circle" />
+        <h2>23</h2>
+        <h4>food trucks</h4>
+        <img src="./images/slider-pic4-1.png" alt="girl taste IceCream" />
+      </div>
+    </section>
+
     <include src="./partials/example.html"></include>
   </body>
 </html>
