--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <header>
+      <h1>Test</h1>
+    </header>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
   </body>
