--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     <title>Page title</title>
     <link rel="stylesheet" href="./css/index.min.css" />
-    <link rel="stylesheet" href="./sass/main.scss" />
+    <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
