--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     </header>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/test.html"></include>
   </body>
 </html>
