--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,29 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+
+    <!-- CC: Add include path -->
+    <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer-reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
+
+<picture>
+  <source srcset=".asdasdas 1x, asdasd@2x.webp" type="image/webp" />
+  <source srcset=".adasdasd 1x, .asdasdasd@2x.png" />
+  <img
+    class="asdasdasd"
+    aria-label="asdasdasd"
+    src="asdadsasd"
+    alt="hfghfdghdf"
+  />
+</picture>
