--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <h1>Test</h1>
     </header>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/how-its-made.html"></include>
     <include src="./partials/example.html"></include>
   </body>
 </html>
