--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,6 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <p>Test</p>
   </body>
 </html>
