--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
@@ -8,11 +15,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <header>
-      <h1>Test</h1>
-    </header>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
-    <include src="./partials/test.html"></include>
+    <include src="./partials/header.html"></include>
   </body>
 </html>
