--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
-    
+     <p>test</p>
   </body>
 </html>
 
