--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     </main>
     <include src="./partials/footer.html"></include>
      <p>test</p>
+     <p>Acesta este un test</p>
   </body>
 </html>
 
