--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     />
     <link href="./css/index.min.css" rel="stylesheet" />
     <title>Page title</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -30,5 +31,6 @@
 
     <include src="./partials/gallery.html"></include>
 
+    <include src="./partials/contacts-section.html"></include>
   </body>
 </html>
