--- a/src/index.html
+++ b/src/index.html
@@ -32,5 +32,7 @@
     <include src="./partials/gallery.html"></include>
 
     <include src="./partials/contacts-section.html"></include>
+
+    <script src="js/products-modal.js"></script>
   </body>
 </html>
