--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <include src="./partials/example.html"></include>
 
     <include src="./partials/products-section.html"></include>
+    <include src="./partials/about-section.html"></include>
 
     <include src="./partials/gallery.html"></include>
 
