--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- start order form --><!---->
+    <!-- Modal start -->
     <div class="modal is-hidden" data-modal>
       <div class="inner-order-form">
         <button class="close-modal" data-modal-close>
@@ -144,7 +144,7 @@
         </form>
       </div>
     </div>
-    <!-- end order form -->
+    <!-- Project  -->
     <header class="hero-header">
       <div class="hero-header-container">
         <div class="hero-header-nav">
@@ -459,7 +459,7 @@
         </div>
       </section>
 
-      <!-- start gallery section -->
+      <!-- gallery section -->
       <section class="gallery">
         <h3 class="hidden-items">Our Gallery</h3>
         <div class="gallery-container">
@@ -593,7 +593,7 @@
         <h3 class="hidden-items">Customers reviews</h3>
         <div class="customer-reviews__image">
           <img
-          id="person-image"
+            id="person-image"
             src="./images/customer-reviews/testimonials1-90w-min.png"
             alt="first testmionial person image"
           />
