--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/how-its-made.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <script src="./js/slider.js" type="text/javascript"></script>
   </body>
 </html>
